@@ -1,6 +1,7 @@
 from rest_framework.response import Response
 from rest_framework.decorators import api_view
 from rest_framework.reverse import reverse
+from rest_framework_simplejwt.tokens import RefreshToken
 
 
 @api_view(['GET'])
@@ -19,7 +20,7 @@ def v1_root(request, fmt=None):
     return Response(root_navigation)
 
 
-@api_view(['get'])
+@api_view(['GET'])
 def token_root(request, fmt=None):
     token_navigation = {
         'auth': reverse('api_v1:token_auth', request=request, format=fmt),
@@ -29,3 +30,21 @@ def token_root(request, fmt=None):
     return Response(token_navigation)
 
 
+@api_view(['POST'])
+def token_refresh(request):
+    token = request.COOKIES.get("burl_refresh_token")
+    if token:
+        refresh = RefreshToken(str(token))
+        access = str(refresh.access_token)
+        if access:
+            return Response({"access": access}, 200)
+        else:
+            return Response({"unauthorized"}, 401)
+    return Response("unauthorized", 401)
+
+
+@api_view(['POST'])
+def token_refresh_revoke(_request):
+    response = Response("ok")
+    response.delete_cookie("burl_refresh_token")
+    return response
