@@ -1,4 +1,5 @@
 from django.urls import include, path
+from django.views.decorators.csrf import csrf_exempt
 from django.views.generic import TemplateView
 from rest_framework.schemas import get_schema_view
 from rest_framework_simplejwt.views import (
@@ -6,6 +7,7 @@ from rest_framework_simplejwt.views import (
 )
 
 from burl.core.api import views
+from burl.core.api.viewsets import TokenCookieObtainPairView
 from burl.redirects.api import urls_v1 as redirect_urls
 
 app_name = 'api_v1'
@@ -14,8 +16,11 @@ urlpatterns = [
     path('', views.v1_root, name='root'),
     path('', include(redirect_urls)),
     path('token/', views.token_root, name='token_root'),
-    path('token/auth/', TokenObtainPairView.as_view(), name='token_auth'),
-    path('token/refresh/', TokenRefreshView.as_view(), name='token_refresh'),
+    # path('token/auth/', TokenObtainPairView.as_view(), name='token_auth'),
+    path('token/auth/', TokenCookieObtainPairView.as_view(), name='token_auth'),
+    # path('token/refresh/', TokenRefreshView.as_view(), name='token_refresh'),
+    path('token/refresh/', csrf_exempt(views.token_refresh), name='token_refresh'),
+    path('token/refresh/revoke/', views.token_refresh_revoke, name='token_refresh_revoke'),
     path('token/verify/', TokenVerifyView.as_view(), name='token_verify'),
     path('swagger/', TemplateView.as_view(
         template_name='core/api/swagger.html',
